finish docker class